--- a/RukaSapi/css/custom.css
+++ b/RukaSapi/css/custom.css
@@ -1370,3 +1370,95 @@ img.hover-shadow {
     top: 42px;
     right: 64px;
 }
+
+#search_input {font-size:18px;}
+.form-group{
+ margin-bottom: 10px;margin-top:50px;
+}
+.form-group label{
+ font-size:18px;
+ font-weight: 600;
+}
+.form-group input{
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.form-group input:focus {
+    color: #495057;
+    background-color: #fff;
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+}
+
+.star_checked{
+    color: rgb(211, 180, 8);
+}
+
+
+.rating{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+}
+
+.rating input{
+    display: none;
+}
+.rating label{
+    position: relative;
+    display: block;
+    cursor: pointer;
+    width: 50px;
+}
+
+.rating label:before{
+    content: '\f005';
+    font-family: fontAwesome;
+    position: relative;
+    display: block;
+    float: left;
+    font-size: 26px;
+    color:rgb(216, 216, 216);
+}
+
+.rating label:after{
+    content: '\f005';
+    font-family: fontAwesome;
+    position: absolute;
+    left: 0;
+    display: block;
+    font-size: 26px;
+    color:rgb(255, 81, 0);
+    top: 0;
+    
+    opacity: 0;
+    transition: .5s;
+    text-shadow: 0 2px 5px rgba(126, 126, 126, 0.5); 
+}
+.rating label:hover:after,
+.rating label:hover ~ label:after,
+.rating input:checked ~ label:after
+{
+    opacity: 1;
+}
+
+.stars-rating {
+    display: flex;
+    align-items: center;
+    margin-bottom: 3px;
+    margin-left: 20px;
+}
+
+.stars-rating i{
+    font-size: 21px;
+    color: rgb(255, 81, 0);
+}
